--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./About/about.html">About</a>
+                <a class="nav-link" href="./about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Projects/project.html">Project</a>
+                <a class="nav-link" href="./project.html">Project</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Skills/skills.html">Skills</a>
+                <a class="nav-link" href="./skills.html">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./Contact/contact.html">Contact</a>
+                <a class="nav-link" href="./contact.html">Contact</a>
               </li>
             </ul>
             
