--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <br/>Koliyur P.O, Manjeshwar<br/>
             Kasaragod,Kerala, 671323<br/></h3>
         </div>
-    <a> href="mailto:razikp.96@gmail.com"> Mail me </a>
+    <a href="mailto:razikp.96@gmail.com"> Mail me </a>
     <h3>Mobile: +91 9745601023</h3>
 
     <div class="movbtn">
