--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,19 @@
 
 <div class="data">
     <h2>Mohammad Razi KP</h2>
-    <h4>S/O Abdulla</h4>
+    <h4>Address:</h4>
         <div class="add">
-        <h3>Darul Aman, KP Plot,<br/> 
-            Near Juma masjid, Daigoli
-            <br/>Koliyur P.O, Manjeshwar<br/>
+        <h3>S/O Abdulla<br/>
+            Darul Aman, KP Plot,<br/> 
+            Near Juma masjid, Daigoli<br/>
+            Koliyur P.O, Manjeshwar<br/>
             Kasaragod,Kerala, 671323<br/></h3>
         </div>
-    <a href="mailto:razikp.96@gmail.com"> Mail me </a>
-    <h3>Mobile: +91 9745601023</h3>
+        <a href="mailto:razikp.96@gmail.com"> Click here to mail  </a>
+        <h3>Mobile: +91 9745601023</h3>
 
     <div class="movbtn">
-        <a href="./index.html"> <button class="btn"><svg xmlns="http://www.w3.org/2000/svg" height="16" fill="currentColor" class="bi bi-arrow-left-square" viewBox="0 0 16 16">
+        <a href="../index.html"> <button class="btn"><svg xmlns="http://www.w3.org/2000/svg" height="16" fill="currentColor" class="bi bi-arrow-left-square" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
           </svg> Go Back</button></a>
     </div> 
