--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,9 @@
             Koliyur P.O, Manjeshwar<br/>
             Kasaragod,Kerala, 671323<br/></h3>
         </div>
-        <a href="mailto:razikp.96@gmail.com"> Click here to mail  </a>
-        <h3>Mobile: +91 9745601023</h3>
+        <a href="mailto:razikp.96@gmail.com"> Click here to mail  </a><br/><br/>
+        <a href="https://wa.me/919745601023"> Whatsapp me </a>
+        <h5><span>Mobile:</span> +91 9745601023</h5>
 
     <div class="movbtn">
         <a href="./index.html"> <button class="btn"><svg xmlns="http://www.w3.org/2000/svg" height="16" fill="currentColor" class="bi bi-arrow-left-square" viewBox="0 0 16 16">
