--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
     <div class="info">
     <h3>Hi, I'm</h3>
     <h1>Mohammad Razi KP</h1>
-    <h3>And I am a  <span> Full Stack Web Developer</span></h3>
+    <h3>And I am a  <span> Front end engineer</span></h3>
     <p>With a total of 3 years of experience in IT industry,
     I have gained knowledge on the work culture and current
     market trends in the domain.</p>
-    <p> My enthusiasm towards web development made
-    me to learn and grow as a full stack web developer.</p>
+    <p> An experienced and enthusiastic front end web developer, 
+        seeking challenging position where I can utilize my expertise 
+        to contribute to the development of captivating user experience.</p>
   
     <div class="logos">
         <a href="https://linkedin.com/in/mohammad-razi-kp-802302159"><svg xmlns="http://www.w3.org/2000/svg" height="24" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
