--- a/about.html
+++ b/about.html
@@ -15,21 +15,30 @@
             <p>With a total of 3 Years of experience in IT industry, I have gained 
             knowledge on the work culture and current market trend in the domain.
             My enthusiasm towards web development made me to learn and grow as a
-            fullstack web developer.</p>
+            frontend engineer.</p>
             <p>As a systems engineer at Infosys, it's a great journey throught
             with experience of client handling irrespective of the clients from different countries,
             so that I got to acquire knowledge how to deal with clients and accomplish their needs. </p>
-        <h2>Internship experience:</h2>
+        <h2>Infosys training:</h2>
         <ul>
-            <li>Project: Design and develop a Pilot lamp</li>
-            <li>Organisation: Schneider electric</li>
-            <li>Duration: 1 Month</li>
+            <li>Contents: Java,SQL,DBMS,Python</li>
+            <li>Project: System that maintains orders and delivery of foods at Restaurant </li>
+            <li>Duration: 4 Month</li>
         </ul>
 
         <h2>Achievements:</h2>
         <ul>
             <li>Awarded as the best performer for the stage performance in speech, skit, presentation etc during campus fest.</li>
             <li>Awarded as the school, college topper</li>
+        </ul>
+
+         <h2>Project experience:</h2>
+        <ul>
+            <li>Implemented user-friendly interfaces and optimized web performance.</li>
+            <li>Created responsive web designs using CSS media queries and bootstrap framework.</li>
+            <li>Implemented front end functionality with JavaScript framework React JS.</li>
+            <li>Worked on RESTful API and Axios node package manager to access web services.</li>
+            <li>Conducted thorough testing and debugging to ensure optimal functionality across various browsers and devices.</li>
         </ul>
         
         <h2>Hobbies:</h2>
@@ -44,7 +53,7 @@
     <div class="movbtn">
     <a href="./index.html"><button class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="16" fill="currentColor" class="bi bi-arrow-left-square" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
-      </svg> Go Back</button></a>
+      </svg> Go to Home page</button></a>
     </div>
 
 </body>
