--- a/skills.html
+++ b/skills.html
@@ -13,9 +13,11 @@
     <li>HTML</li><p>Proficiency Level: Professional</p>
     <li>CSS</li><p>Proficiency Level: Professional</p>
     <li>JavaScript</li><p>Proficiency Level: Professional</p>
+    <li>React JS, NextJS</li><p>Proficiency Level: Professional</p>
+    <li>Redux in React</li><p>Proficiency Level: Good</p>
+    <li>RESTful APIs, Axios API</li>Proficiency Level: professional
     <li>Bootstrap</li><p>Proficiency Level: Professional</p>
     <li>UI/UX design</li><p>Proficiency Level: Good</p>
-    <li>React, Node.js, Next.js</li><p>Proficiency Level: Professional</p>
     <li>Java, Python</li><p>Proficiency Level: Professional</p>
     <li>SQL, rDBMS</li><p>Proficiency Level: Professional</p>
     <li>C Programming</li><p>Proficiency Level: Professional</p>
@@ -25,7 +27,7 @@
 <div class="movbtn">
     <a href="./index.html"><button class="btn"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-square" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm11.5 5.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z"/>
-      </svg> Go Back</button></a>
+      </svg> Go to Home Page</button></a>
 </div>
 
 </body>
