--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
     <li>CSS</li><p>Proficiency Level: Professional</p>
     <li>JavaScript</li><p>Proficiency Level: Professional</p>
     <li>React JS, NextJS</li><p>Proficiency Level: Professional</p>
-    <li>RESTful APIs, Axios API</li><p></p>Proficiency Level: professional</p>
+    <li>RESTful APIs, Axios API</li><p>Proficiency Level: professional</p>
     <li>Redux in React</li><p>Proficiency Level: Good</p>
     <li>Bootstrap</li><p>Proficiency Level: Professional</p>
     <li>UI/UX design</li><p>Proficiency Level: Good</p>
