--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="movebtn">
-    <a href="./Mohammad's Resume.pdf"><button onclick="" class="btn2">One-Page Profile</button></a>
+    <a href="./Mohammad_Razi_KP.pdf"><button onclick="" class="btn2">One-Page Profile</button></a>
     </div>
   </div>
     
